--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
 }
 
 .page1 {
-  background: top 468px right 81.1% no-repeat url(img/filter.png), top 80px center no-repeat url(img/fone_elips.png), center no-repeat url(img/fone_line.png), top 37% left 13.8% no-repeat url(img/elipses1.png), top 80% right 16.2% no-repeat url(img/elipses2.png), center/cover no-repeat url(img/fone_photo.jpg);
+  background: top 468px right 81.1% no-repeat url(./img/filter.png), top 80px center no-repeat url(./img/fone_elips.png), center no-repeat url(./img/fone_line.png), top 37% left 13.8% no-repeat url(./img/elipses1.png), top 80% right 16.2% no-repeat url(./img/elipses2.png), center/cover no-repeat url(./img/fone_photo.jpg);
   min-height: 100vh;
 }
 
@@ -182,7 +182,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(81, 81, 81, 0.9) url(img/icons/loading.gif) center/50px no-repeat;
+  background: rgba(81, 81, 81, 0.9) url(./img/icons/loading.gif) center/50px no-repeat;
   opacity: 0;
   visibility: hidden;
   transition: all 0.5s ease 0s;
@@ -253,7 +253,7 @@ body {
   display: block;
   width: 25px;
   height: 50px;
-  background: url(img/btn-down.png) center no-repeat;
+  background: url(./img/btn-down.png) center no-repeat;
   left: 49%;
   bottom: 50px;
 }
@@ -292,7 +292,7 @@ input[type="file"] {
   display: block;
   width: 12px;
   height: 12px;
-  background: url(img/icons/icons8-camera.png) center no-repeat;
+  background: url(./img/icons/icons8-camera.png) center no-repeat;
 }
 
 .inp--code {
@@ -308,7 +308,7 @@ input[type="file"] {
   display: block;
   width: 12px;
   height: 12px;
-  background: url(img/icons/gears.png) center no-repeat;
+  background: url(./img/icons/gears.png) center no-repeat;
 }
 
 .inp--name {
@@ -324,7 +324,7 @@ input[type="file"] {
   display: block;
   width: 12px;
   height: 12px;
-  background: url(img/icons/user_1.png) center no-repeat;
+  background: url(./img/icons/user_1.png) center no-repeat;
 }
 
 .inp--tel {
@@ -340,12 +340,12 @@ input[type="file"] {
   display: block;
   width: 12px;
   height: 12px;
-  background: url(img/icons/call-answer.png) center no-repeat;
+  background: url(./img/icons/call-answer.png) center no-repeat;
 }
 
 .page2 {
   min-height: 100vh;
-  background: url(img/elipses3.png) 8% 41.5% no-repeat, url(img/fone2.png) -10% 63.3% no-repeat;
+  background: url(./img/elipses3.png) 8% 41.5% no-repeat, url(./img/fone2.png) -10% 63.3% no-repeat;
 }
 
 .page2__text {
@@ -405,7 +405,7 @@ input[type="file"] {
   width: 360px;
   height: 505px;
   border-radius: 5px;
-  background: url(img/icons/zoom-in.png) center no-repeat, rgba(34, 53, 74, 0.5);
+  background: url(./img/icons/zoom-in.png) center no-repeat, rgba(34, 53, 74, 0.5);
 }
 
 .page2__slider-item > img {
@@ -439,12 +439,12 @@ input[type="file"] {
   position: absolute;
   top: 230px;
   left: -23px;
-  background: url(img/icons/back.png) center no-repeat, #fafafa;
+  background: url(./img/icons/back.png) center no-repeat, #fafafa;
 }
 
 .btn-left:hover {
   transform: rotate(180deg);
-  background: url(img/icons/forward.png) center no-repeat, #ff9311;
+  background: url(./img/icons/forward.png) center no-repeat, #ff9311;
 }
 
 .btn-right {
@@ -452,12 +452,12 @@ input[type="file"] {
   top: 230px;
   right: -23px;
   transform: rotate(180deg);
-  background: url(img/icons/back.png) center no-repeat, #fafafa;
+  background: url(./img/icons/back.png) center no-repeat, #fafafa;
 }
 
 .btn-right:hover {
   transform: rotate(0deg);
-  background: url(img/icons/forward.png) center no-repeat, #ff9311;
+  background: url(./img/icons/forward.png) center no-repeat, #ff9311;
 }
 
 .blue {
