--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,35 @@ input[type="file"] {
   background: url(../img/elipses3.png) 8% 41.5% no-repeat, url(../img/fone2.png) -10% 63.3% no-repeat;
 }
 
+.page2__wrapper {
+  position: relative;
+}
+
+.page2__wrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -102%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 0 30px #fff;
+  z-index: 5;
+  overflow: hidden;
+}
+
+.page2__wrapper::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -102%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.4);
+  z-index: 5;
+  overflow: hidden;
+}
+
 .page2__text {
   padding-top: 84px;
   margin-bottom: 70px;
@@ -392,8 +421,9 @@ input[type="file"] {
 
 .page2__slider-item {
   position: relative;
-  flex: 0 0 34%;
-  max-width: 34%;
+  flex: 0 0 32%;
+  margin-right: 23px;
+  max-width: 33.33333%;
 }
 
 .page2__slider-item:hover:after {
