--- a/css/style.css
+++ b/css/style.css
@@ -67,35 +67,37 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 html {
+  font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
 body {
+  font-size: 1.4rem;
   max-width: 100%;
-  max-height: 100%;
+  min-height: 100%;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
 }
 
 .container {
   position: relative;
-  max-width: 1170px;
+  max-width: 117rem;
   height: 100vh;
-  padding: 0 15px;
+  padding: 0 1.5rem;
   margin: 0 auto;
 }
 
 .header {
-  max-width: 1138px;
-  max-height: 95px;
+  max-width: 100%;
+  max-height: 9.5rem;
   display: flex;
   justify-content: space-between;
-  padding-top: 10px;
+  padding-top: 1rem;
 }
 
 .header__logo {
-  max-width: 140px;
-  max-height: 95px;
+  max-width: 14rem;
+  max-height: 9.5rem;
 }
 
 .header__info {
@@ -104,54 +106,55 @@ body {
 }
 
 .header__info-email a {
-  padding-left: 6px;
-  font-size: 16px;
+  padding-left: 0.6rem;
+  font-size: 1.6rem;
   font-weight: 600;
 }
 
 .header__info-phone {
-  padding-left: 36px;
+  padding-left: 3.6rem;
 }
 
 .header__info-phone:nth-child(3) {
-  padding-left: 50px;
+  padding-left: 5rem;
 }
 
 .header__info-phone a {
   display: inline-block;
-  padding-top: 2px;
-  padding-left: 8px;
+  padding-top: 0.2rem;
+  padding-left: 0.8rem;
   font-weight: 600;
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 .page1 {
-  background: top 468px right 81.1% no-repeat url(../img/filter.png), top 80px center no-repeat url(../img/fone_elips.png), center no-repeat url(../img/fone_line.png), top 37% left 13.8% no-repeat url(../img/elipses1.png), top 80% right 16.2% no-repeat url(../img/elipses2.png), center/cover no-repeat url(../img/fone_photo.jpg);
+  background: bottom 0 left 10vw/74.5rem no-repeat url(../img/filter.png), center/cover no-repeat url(../img/fone3.jpg);
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .page1__title {
-  max-width: 660px;
-  margin-top: 165px;
-  font-size: 58px;
+  max-width: 66rem;
+  margin-top: 16.5rem;
+  font-size: 5.8rem;
   font-weight: 900;
-  line-height: 72px;
+  line-height: 7.2rem;
   text-transform: uppercase;
 }
 
 .page1__text {
-  width: 372px;
-  margin: 44px 0 0 290px;
-  font-size: 17px;
+  max-width: 37.2rem;
+  margin: 4.4rem 0 0 29rem;
+  font-size: 1.7rem;
   font-weight: 600;
-  line-height: 35px;
+  line-height: 3.5rem;
 }
 
 .page1__text > p > span {
   display: inline-block;
-  padding: 0 17px;
+  padding: 0 1.7rem;
   background-color: rgba(0, 0, 0, 0.4);
-  margin: 2px;
+  margin: 0.2rem;
   border-radius: 5px;
 }
 
@@ -165,11 +168,11 @@ body {
 
 .page1__call-back {
   position: absolute;
-  top: 235px;
-  right: 16px;
-  width: 390px;
-  height: 475px;
-  padding: 50px 30px;
+  top: 23.5rem;
+  right: 1.6rem;
+  max-width: 39rem;
+  max-height: 47.5rem;
+  padding: 5rem 3rem;
   box-shadow: 0 49px 56px 1px rgba(34, 53, 74, 0.2);
   border-radius: 5px;
   background-color: #ffffff;
@@ -195,24 +198,24 @@ body {
 
 .page1__call-back-title {
   color: #22354a;
-  font-size: 22px;
+  font-size: 2.2rem;
   font-weight: 900;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
 }
 
 .page1__inp {
   display: block;
-  width: 330px;
-  height: 55px;
-  font-size: 13px;
+  width: 33rem;
+  height: 5.5rem;
+  font-size: 1.3rem;
   color: #22354a;
   border-radius: 5px;
   border: 1px solid #f1f1f1;
   background-color: #f5f5f5;
-  margin-bottom: 10px;
-  padding: 22px 12px 20px 43px;
+  margin-bottom: 1rem;
+  padding: 2.2rem 1.2rem 2rem 4.3rem;
   transition: background 0.2s linear;
 }
 
@@ -222,7 +225,7 @@ body {
 
 .page1__inp::placeholder {
   color: #8f959c;
-  font-size: 13px;
+  font-size: 1.3rem;
 }
 
 .page1__inp._error {
@@ -230,11 +233,11 @@ body {
 }
 
 .page1__call-back-btn {
-  margin-top: 10px;
-  width: 330px;
-  height: 55px;
+  margin-top: 1rem;
+  width: 33rem;
+  height: 5.5rem;
   color: white;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 800;
   text-transform: uppercase;
   box-shadow: 0 24px 29px rgba(223, 122, 0, 0.34);
@@ -251,11 +254,11 @@ body {
   cursor: pointer;
   position: absolute;
   display: block;
-  width: 25px;
-  height: 50px;
+  width: 2.5rem;
+  height: 5rem;
   background: url(../img/btn-down.png) center no-repeat;
   left: 49%;
-  bottom: 50px;
+  bottom: 5rem;
 }
 
 .page1__arrow-down:hover {
@@ -279,19 +282,19 @@ input[type="file"] {
 }
 
 .inp--file img {
-  width: 25px;
-  height: 20px;
+  width: 2.5rem;
+  height: 2rem;
 }
 
 .inp--file:before {
   content: "";
   position: absolute;
-  left: 21px;
+  left: 2.1rem;
   top: 50%;
   transform: translateY(-50%);
   display: block;
-  width: 12px;
-  height: 12px;
+  width: 1.2rem;
+  height: 1.2rem;
   background: url(../img/icons/icons8-camera.png) center no-repeat;
 }
 
@@ -302,12 +305,12 @@ input[type="file"] {
 .inp--code:before {
   content: "";
   position: absolute;
-  left: 22px;
+  left: 2.2rem;
   top: 50%;
   transform: translateY(-50%);
   display: block;
-  width: 12px;
-  height: 12px;
+  width: 1.2rem;
+  height: 1.2rem;
   background: url(../img/icons/gears.png) center no-repeat;
 }
 
@@ -318,12 +321,12 @@ input[type="file"] {
 .inp--name:before {
   content: "";
   position: absolute;
-  left: 22px;
+  left: 2.2rem;
   top: 50%;
   transform: translateY(-50%);
   display: block;
-  width: 12px;
-  height: 12px;
+  width: 1.2rem;
+  height: 1.2rem;
   background: url(../img/icons/user_1.png) center no-repeat;
 }
 
@@ -334,18 +337,19 @@ input[type="file"] {
 .inp--tel:before {
   content: "";
   position: absolute;
-  left: 22px;
+  left: 2.2rem;
   top: 50%;
   transform: translateY(-50%);
   display: block;
-  width: 12px;
-  height: 12px;
+  width: 1.2rem;
+  height: 1.2rem;
   background: url(../img/icons/call-answer.png) center no-repeat;
 }
 
 .page2 {
   min-height: 100vh;
   background: url(../img/elipses3.png) 8% 41.5% no-repeat, url(../img/fone2.png) -10% 63.3% no-repeat;
+  overflow: hidden;
 }
 
 .page2__wrapper {
@@ -353,10 +357,10 @@ input[type="file"] {
 }
 
 .page2__wrapper::before {
-  content: '';
+  content: "";
   position: absolute;
-  top: 0;
-  left: -102%;
+  top: 20rem;
+  left: -100%;
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.4);
@@ -366,20 +370,21 @@ input[type="file"] {
 }
 
 .page2__wrapper::after {
-  content: '';
+  content: "";
   position: absolute;
-  top: 0;
+  top: 3rem;
   right: -102%;
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 0 30px #fff;
   z-index: 5;
   overflow: hidden;
 }
 
 .page2__text {
-  padding-top: 84px;
-  margin-bottom: 70px;
+  padding-top: 8.4rem;
+  margin-bottom: 7rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -388,19 +393,19 @@ input[type="file"] {
 .page2__text-title {
   display: block;
   color: #22354a;
-  width: 705px;
+  max-width: 70.5rem;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: 900;
-  line-height: 54px;
+  line-height: 5.4rem;
 }
 
 .page2__text-border {
-  width: 305px;
-  height: 89px;
-  font-size: 20px;
-  padding: 19px 40px 0 70px;
-  line-height: 27px;
+  max-width: 30.5rem;
+  height: 8.9rem;
+  font-size: 2rem;
+  padding: 1.9rem 4rem 0 7rem;
+  line-height: 2.7rem;
   font-weight: 800;
   text-align: right;
   border-radius: 0 5px;
@@ -411,7 +416,7 @@ input[type="file"] {
 
 .page2__slider {
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 5rem;
 }
 
 .page2__slider-photos {
@@ -422,7 +427,7 @@ input[type="file"] {
 .page2__slider-item {
   position: relative;
   flex: 0 0 32%;
-  margin-right: 23px;
+  margin-right: 2.8rem;
   max-width: 33.33333%;
 }
 
@@ -432,24 +437,24 @@ input[type="file"] {
   top: 0;
   left: 0;
   display: block;
-  width: 360px;
-  height: 505px;
+  width: 36rem;
+  height: 100%;
   border-radius: 5px;
   background: url(../img/icons/zoom-in.png) center no-repeat, rgba(34, 53, 74, 0.5);
 }
 
 .page2__slider-item > img {
   position: relative;
-  width: 360px;
-  height: 505px;
+  width: 36rem;
+  height: 100%;
   box-shadow: 0 18px 56px 1px rgba(174, 174, 174, 0.71);
   border-radius: 5px;
 }
 
 .page2__slider-btn {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 5rem;
+  height: 5rem;
   border: 1px solid #f1f1f1;
   border-radius: 5px;
   transition: background 0.2s linear;
@@ -457,18 +462,19 @@ input[type="file"] {
 }
 
 .page2__slider-pagination {
-  font-size: 30px;
+  font-size: 3rem;
   color: #ff9311;
   text-transform: uppercase;
   font-weight: 800;
-  margin-left: 158px;
-  padding-bottom: 115px;
+  margin-left: 15.8rem;
+  padding-bottom: 11.5rem;
 }
 
 .btn-left {
   position: absolute;
-  top: 230px;
-  left: -23px;
+  top: 23rem;
+  left: -2.3rem;
+  z-index: 10;
   background: url(../img/icons/back.png) center no-repeat, #fafafa;
 }
 
@@ -479,8 +485,8 @@ input[type="file"] {
 
 .btn-right {
   position: absolute;
-  top: 230px;
-  right: -23px;
+  top: 23rem;
+  right: -2.3rem;
   transform: rotate(180deg);
   background: url(../img/icons/back.png) center no-repeat, #fafafa;
 }
@@ -520,4 +526,310 @@ input[type="file"] {
   height: 8px;
   border-right: 3px solid #ff9311;
   border-bottom: 3px solid #ff9311;
+}
+
+@media (max-width: 1599.98px) {
+  .page1 {
+    background: bottom 0 left 1vw/74.5rem no-repeat url(../img/filter.png), center/cover no-repeat url(../img/fone3.jpg);
+  }
+  .page2 {
+    background: url(../img/elipses3.png) 0 41.5% no-repeat, url(../img/fone2.png) -50% 63.3% no-repeat;
+  }
+}
+
+@media (max-width: 1439.98px) {
+  .page1 {
+    background: bottom 0 left 0/65rem no-repeat url(../img/filter.png), center/cover no-repeat url(../img/fone3.jpg);
+  }
+  .page2 {
+    background: url(../img/elipses3.png) 0 41.5% no-repeat, url(../img/fone2.png) -50% 63.3% no-repeat;
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .page1 {
+    background: bottom 0 left 0/60rem no-repeat url(../img/filter.png), center/cover no-repeat url(../img/fone3.jpg);
+  }
+  .page1__title {
+    max-width: 55rem;
+    margin-top: 16rem;
+    font-size: 4.5rem;
+    line-height: 6rem;
+  }
+  .page1__text {
+    max-width: 35rem;
+    margin: 4rem 0 0 20rem;
+    font-size: 1.6rem;
+    line-height: 3.5rem;
+  }
+  .page2 {
+    background: url(../img/elipses3.png) 0 41.5% no-repeat, url(../img/fone2.png) -50% 60%/50vw no-repeat;
+  }
+  .page2__text {
+    padding-top: 8rem;
+    margin-bottom: 7rem;
+  }
+  .page2__text-title {
+    max-width: 70rem;
+    font-size: 3.6rem;
+  }
+  .page2__text-border {
+    max-width: 29rem;
+    height: 9rem;
+    font-size: 1.8rem;
+    padding: 2rem 4rem 0 5rem;
+    line-height: 2.5rem;
+  }
+  .page2__slider-item:hover:after {
+    content: "";
+    width: 30rem;
+  }
+  .page2__slider-item > img {
+    width: 30rem;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .header__info-email a {
+    font-size: 1.5rem;
+  }
+  .header__info-phone:nth-child(3) {
+    padding-left: 4rem;
+  }
+  .header__info-phone a {
+    font-size: 1.6rem;
+  }
+  .page1__title {
+    max-width: 58rem;
+    margin-top: 1rem;
+    font-size: 5rem;
+    line-height: 5rem;
+  }
+  .page1__text {
+    max-width: 35rem;
+    margin: 6rem 0 0 2rem;
+    font-size: 1.6rem;
+    line-height: 3.5rem;
+  }
+  .page1__call-back {
+    top: 30rem;
+    max-width: 35rem;
+    max-height: 44rem;
+    padding: 4rem 2rem;
+  }
+  .page1__call-back-title {
+    font-size: 2rem;
+  }
+  .page1__inp {
+    width: 31rem;
+  }
+  .page1__call-back-btn {
+    width: 31rem;
+  }
+  .page2 {
+    background: url(../img/elipses3.png) -10% 35%/20vw no-repeat, url(../img/fone2.png) -50% 60%/50vw no-repeat;
+  }
+  .page2__text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .page2__text-title {
+    max-width: 99rem;
+    font-size: 3.8rem;
+    text-align: left;
+  }
+  .page2__text-border {
+    max-width: 29rem;
+    height: 9rem;
+    font-size: 1.9rem;
+    padding: 2rem 4rem 0 5rem;
+    line-height: 2.5rem;
+  }
+  .page2__slider-item {
+    flex: 0 0 47.54%;
+    margin-right: 2.8rem;
+    max-width: 50%;
+  }
+  .page2__slider-item:hover:after {
+    content: "";
+    width: 35rem;
+  }
+  .page2__slider-item > img {
+    width: 35rem;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .header__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .header__info-email {
+    margin-bottom: 0.5rem;
+  }
+  .header__info-email a {
+    font-size: 1.4rem;
+  }
+  .header__info-phone {
+    padding-left: 0;
+    margin-bottom: 0.5rem;
+  }
+  .header__info-phone:nth-child(3) {
+    padding-left: 0;
+  }
+  .header__info-phone a {
+    font-size: 1.5rem;
+  }
+  .page1__title {
+    max-width: 55rem;
+    font-size: 4.5rem;
+  }
+  .page1__text {
+    transform: rotate(-90deg);
+    position: absolute;
+    left: -12rem;
+    top: 40%;
+    max-width: 35rem;
+    margin: 1rem 0 0 2rem;
+    font-size: 1.6rem;
+  }
+  .page2 {
+    background: url(../img/elipses3.png) -10% 45%/20vw no-repeat, url(../img/fone2.png) -50% 60%/50vw no-repeat;
+  }
+  .page2__text-title {
+    max-width: 76rem;
+    font-size: 3.5rem;
+  }
+  .page2__text-border {
+    font-size: 1.8rem;
+    padding: 2rem 4rem 0 4rem;
+  }
+  .page2__slider-item {
+    flex: 0 0 46.54%;
+    margin-right: 2rem;
+  }
+  .page2__slider-item:hover:after {
+    content: "";
+    width: 24rem;
+  }
+  .page2__slider-item > img {
+    width: 24rem;
+  }
+  .page2__slider-pagination {
+    font-size: 2.5rem;
+  }
+  .btn-left {
+    top: 15rem;
+  }
+  .btn-right {
+    top: 15rem;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .header {
+    height: 8rem;
+  }
+  .header__logo {
+    max-width: 10rem;
+    height: 100%;
+  }
+  .header__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .header__info-email {
+    margin-bottom: 0.3rem;
+  }
+  .header__info-email a {
+    font-size: 1.2rem;
+  }
+  .header__info-phone {
+    margin-bottom: 0.3rem;
+  }
+  .page1 {
+    background: bottom 1.5rem left 0/35rem no-repeat url(../img/filter.png), center/cover no-repeat url(../img/fone3.jpg);
+  }
+  .page1__arrow-down {
+    bottom: 2rem;
+  }
+  .page1__title {
+    max-width: 54rem;
+    font-size: 3rem;
+    text-align: center;
+  }
+  .page1__text {
+    transform: rotate(0deg);
+    position: relative;
+    left: 0;
+    top: 0;
+    max-width: 32rem;
+    font-size: 1.3rem;
+    margin: 1rem 0 0 0;
+    line-height: 2.5rem;
+  }
+  .page1__call-back {
+    top: 40rem;
+    max-width: 29rem;
+    max-height: 37rem;
+    padding: 2rem 1rem;
+  }
+  .page1__call-back-title {
+    font-size: 1.8rem;
+  }
+  .page1__inp {
+    width: 27rem;
+    height: 4.4rem;
+  }
+  .page1__call-back-btn {
+    height: 4.4rem;
+    width: 27rem;
+  }
+  .inp--file {
+    padding-top: 1.5rem;
+  }
+  .page2 {
+    background: url(../img/elipses3.png) -10% 45%/20vw no-repeat, url(../img/fone2.png) -50% 60%/50vw no-repeat;
+  }
+  .page2__text {
+    padding-top: 4rem;
+    margin-bottom: 5rem;
+  }
+  .page2__text-title {
+    max-width: 55rem;
+    font-size: 3rem;
+    text-align: center;
+  }
+  .page2__text-border {
+    font-size: 1.6rem;
+  }
+  .page2__slider-item {
+    flex: 0 0 96%;
+    margin-right: 2.8rem;
+    max-width: 96%;
+  }
+  .page2__slider-item:hover:after {
+    content: "";
+    width: 28rem;
+  }
+  .page2__slider-item > img {
+    width: 28rem;
+  }
+  .page2__slider-pagination {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-left: 0;
+    padding-bottom: 5rem;
+  }
+}
+
+@media (max-height: 959.98px) {
+  .container {
+    height: 96rem;
+  }
 }
